<resources>
    <string name="app_name">GroceryAndroidApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
<!--    <string name="offer">Offers</string>-->
<!--    <string name="new_product">New Product</string>-->
    <string name="order">My Order</string>
    <string name="cart">My Cart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>